# Minecraft-Rust

./: Cargo.toml  README.md
src/: main.rs  monitoring.rs
src/debug/: gui.rs  mod.rs  overlay.rs
src/monitoring/: frame_profiler.rs  mod.rs  system_stats.rs
src/renderer/: camera.rs  geometry.rs  mod.rs  pipeline.rs  shader.wgsl  shaders.rs  uniforms.rs  vertex.rs
